--- a/static/app.css
+++ b/static/app.css
@@ -1326,8 +1326,7 @@ img.google-aspect-ratio
 .container {
   display: block;
   position: relative;
-  padding-left: 35px;
-  margin-bottom: 12px;
+  padding-left: 20px;
   cursor: pointer;
   font-size: 22px;
   -webkit-user-select: none;
@@ -1346,7 +1345,7 @@ img.google-aspect-ratio
 /* Create a custom checkbox */
 .checkmark {
   position: absolute;
-  top: 0;
+  top: -10px;
   left: 0;
   height: 20px;
   width: 20px;
@@ -1361,6 +1360,7 @@ img.google-aspect-ratio
 /* When the checkbox is checked */
 .container input:checked ~ .checkmark {
   background-color: var(--primary);
+  border: 1.5px solid transparent;
 }
 
 /*
