feat(invest-tier-pricing): initialize widget
(1) First commit regarding Investor Section for Investment Tier Pricing.
(2) (rewrite) CSS corrections and CSS format.

feat #1889

--- a/static/app.css
+++ b/static/app.css
@@ -164,6 +164,7 @@ p {
   --dark-theme-1-4-shade: #383838;
   --dark-theme-1-7-shade: #313131;
   --dark-theme-1-5-shade: #161616;
+  --dark-theme-1-6-shade: #4D4D4D;
   --dark-theme-1-5-shade-o-0-2: rgba(22, 22, 22, 0.2);
 	/*
   ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
