--- a/static/app.css
+++ b/static/app.css
@@ -1769,6 +1769,11 @@ h6 {
   /* 🎨 style */
   color: var(--primary) !important;
 }
+.dark-background .color-primary, .dark-background-1 .color-primary {
+  /* 🔥 override */
+  /* 🎨 style */
+  color: var(--primary) !important;
+}
 
 .color-primary-fade {
   /* 🎨 style */
@@ -1776,6 +1781,11 @@ h6 {
 }
 
 .color-primary-fade-2 {
+  /* 🎨 style */
+  color: var(--primary-fade-2) !important;
+}
+.dark-background .color-primary-fade-2.dark-v0, .dark-background-1 .color-primary-fade-2.dark-v0 {
+  /* 🔥 override */
   /* 🎨 style */
   color: var(--primary-fade-2) !important;
 }
@@ -1805,17 +1815,22 @@ h6 {
   color: var(--red-bright-v2) !important;
 }
 
-.color-red-error {
+.color-error {
   /* 🎨 style */
   color: var(--red-error) !important;
 }
 
-.color-green-success {
+.color-success {
   /* 🎨 style */
   color: var(--green-success) !important;
 }
 
-.color-green-color {
+.color-green {
+  /* 🎨 style */
+  color: var(--green-color) !important;
+}
+.dark-background .color-green.dark-v0, .dark-background-1 .color-green.dark-v0 {
+  /* 🔥 override */
   /* 🎨 style */
   color: var(--green-color) !important;
 }
@@ -1850,12 +1865,17 @@ h6 {
   color: var(--grey-shade-3) !important;
 }
 
-.color-grey-shade-4 {
+.color-grey-v2 {
   /* 🎨 style */
   color: var(--grey-shade-4) !important;
 }
+.dark-background .color-grey-v2.grey-v1, .dark-background-1 .color-grey-v2.grey-v1 {
+  /* 🔥 override */
+  /* 🎨 style */
+  color: var(--grey-shade-3) !important;
+}
 
-.color-yellow-gold {
+.color-yellow {
   /* 🎨 style */
   color: var(--yellow-gold) !important;
 }
@@ -1874,20 +1894,65 @@ h6 {
   /* 🎨 style */
   color: var(--grey) !important;
 }
+.dark-background .color-grey, .dark-background-1 .color-grey {
+  /* 🔥 override */
+  /* 🎨 style */
+  color: var(--grey-shade-2) !important;
+}
+.dark-background .color-grey.dark-white-v1, .dark-background-1 .color-grey.dark-white-v1 {
+  /* 🔥 override */
+  /* 🎨 style */
+  color: var(--white) !important;
+}
+.dark-background .color-grey.dark-white-v3, .dark-background-1 .color-grey.dark-white-v3 {
+  /* 🔥 override */
+  /* 🎨 style */
+  color: var(--white-3) !important;
+}
+.dark-background .color-grey.grey-v1, .dark-background-1 .color-grey.grey-v1 {
+  /* 🔥 override */
+  /* 🎨 style */
+  color: var(--grey-shade) !important;
+}
+.dark-background .color-grey.dark-v1, .dark-background-1 .color-grey.dark-v1 {
+  /* 🔥 override */
+  /* 🎨 style */
+  color: var(--grey) !important;
+}
 
 .color-background-surface {
   /* 🎨 style */
   color: var(--background-surface) !important;
 }
 
-.color-dark-theme {
+.color-black-2 {
   /* 🎨 style */
   color: var(--dark-theme) !important;
 }
+.dark-background .color-black-2, .dark-background-1 .color-black-2 {
+  /* 🔥 override */
+  /* 🎨 style */
+  color: var(--white) !important;
+}
+.dark-background .color-black-2.grey-v1, .dark-background-1 .color-black-2.grey-v1 {
+  /* 🔥 override */
+  /* 🎨 style */
+  color: var(--grey-shade) !important;
+}
 
-.color-dark-theme-1 {
+.color-black-3 {
   /* 🎨 style */
   color: var(--dark-theme-1) !important;
+}
+.dark-background .color-black-3, .dark-background-1 .color-black-3 {
+  /* 🔥 override */
+  /* 🎨 style */
+  color: var(--white) !important;
+}
+.dark-background .color-black-3.dark-v1, .dark-background-1 .color-black-3.dark-v1 {
+  /* 🔥 override */
+  /* 🎨 style */
+  color: var(--grey-shade) !important;
 }
 
 .color-dark-theme-1-shade {
@@ -2026,89 +2091,6 @@ h6 {
 
 .opacity-0-4 {
   opacity: 0.4;
-}
-
-/*
-◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
-◼️ DARK-THEME :: FONT COLOURS                                                           ◼️
-◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
-*/
-.dark-background .color-primary-fade-2.dark-v0,
-.dark-background-1 .color-primary-fade-2.dark-v0 {
-  /* 🔥 override */
-  /* 🎨 style */
-  color: var(--primary-fade-2) !important;
-}
-
-.dark-background .color-grey,
-.dark-background-1 .color-grey {
-  /* 🎨 style */
-  color: var(--grey-shade-2) !important;
-}
-
-.dark-background .color-grey.dark-white-v1,
-.dark-background-1 .color-grey.dark-white-v1 {
-  /* 🔥 override */
-  /* 🎨 style */
-  color: var(--white) !important;
-}
-
-.dark-background .color-grey.dark-white-v3,
-.dark-background-1 .color-grey.dark-white-v3 {
-  /* 🔥 override */
-  /* 🎨 style */
-  color: var(--white-3) !important;
-}
-
-.dark-background .color-black-2,
-.dark-background-1 .color-black-2,
-.dark-background .color-black-3,
-.dark-background-1 .color-black-3 {
-  /* 🎨 style */
-  color: var(--white) !important;
-}
-
-.dark-background .color-black-2.grey-v1,
-.dark-background-1 .color-black-2.grey-v1 {
-  /* 🔥 override */
-  /* 🎨 style */
-  color: var(--grey-shade) !important;
-}
-
-.dark-background .global.color-grey.grey-v1 > *,
-.dark-background-1 .global.color-grey.grey-v1 > *,
-.dark-background .color-grey.grey-v1,
-.dark-background-1 .color-grey.grey-v1 {
-  /* 🔥 override */
-  /* 🎨 style */
-  color: var(--grey-shade) !important;
-}
-
-.dark-background .color-grey-v2.grey-v1,
-.dark-background-1 .color-grey-v2.grey-v1 {
-  /* 🔥 override */
-  /* 🎨 style */
-  color: var(--grey-shade-3) !important;
-}
-
-.dark-background .color-grey.dark-v1,
-.dark-background-1 .color-grey.dark-v1 {
-  /* 🔥 override */
-  /* 🎨 style */
-  color: var(--grey) !important;
-}
-
-.dark-background .color-primary,
-.dark-background-1 .color-primary {
-  /* 🎨 style */
-  color: var(--primary) !important;
-}
-
-.dark-background .color-green.dark-v0,
-.dark-background-1 .color-green.dark-v0 {
-  /* 🔥 override */
-  /* 🎨 style */
-  color: var(--green-color) !important;
 }
 
 /* #region ➤ [MAIN] [BUTTONS] Website Layout */
@@ -2280,157 +2262,6 @@ button .btn-shadow-1 {
 }
 
 /* #endregion ➤ [MAIN] [BUTTONS] Website Layout */
-hr {
-  /* 🎨 style */
-  width: 100%;
-  margin: 16.17px 0;
-  opacity: 0.25;
-  border: 1.46983px solid #ff5555;
-  background-color: #ff5555;
-}
-
-form fieldset {
-  /* 🎨 style */
-  outline: none;
-  border: none;
-  padding: 0;
-  margin: 0;
-}
-form input, form select {
-  /* 🎨 style */
-  outline: none;
-  border: none;
-  opacity: 1;
-  cursor: text;
-  align-items: center;
-  text-align: start;
-  display: flex;
-  transition: all 0.15s ease;
-  /* background: #ffffff; */
-  /* border: 0.5px solid #37474f; */
-  box-sizing: border-box;
-  border-radius: 7.34914px;
-  padding: 7px;
-  background-color: transparent;
-  border: 1px solid var(--gray-day, #CCC);
-}
-form input {
-  /* 🎨 style */
-  height: 44px;
-  width: -webkit-fill-available;
-  width: -moz-available;
-  border: 1px solid var(--grey-shade);
-  box-sizing: border-box;
-  border-radius: 8px;
-  padding: 20px 12px;
-  outline: none;
-  font-size: 14px;
-  background-color: transparent;
-}
-form input:hover {
-  /* 🎨 style */
-  border: 1px solid var(--grey);
-}
-form input:focus {
-  /* 🎨 style */
-  border: 1px solid var(--dark-theme-1);
-}
-form input[placeholder] {
-  /* 🎨 style */
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-form input.v-1 {
-  /* 🎨 style */
-  width: 20px;
-  height: 20px;
-  border: 1px solid #CCCCCC;
-  accent-color: var(--primary);
-}
-.dark-background-1 form input {
-  border: 1px solid var(--dark-theme-1-2-shade);
-}
-.dark-background-1 form input:hover {
-  /* 🎨 style */
-  border: 1px solid var(--dark-theme-1-3-shade);
-}
-.dark-background-1 form input:focus {
-  /* 🎨 style */
-  border: 1px solid var(--dark-theme-1-3-shade);
-}
-
-.width-auto {
-  width: auto;
-}
-
-.width-fit-content {
-  width: fit-content;
-}
-
-.width-100 {
-  width: 100%;
-}
-
-img.google-aspect-ratio {
-  /* 🎨 style */
-  /* width: auto; */
-  /* max-height: 100%; */
-  object-fit: contain;
-}
-
-.checkmark {
-  position: absolute;
-  top: -10px;
-  left: 0;
-  height: 20px;
-  width: 20px;
-  background-color: transparent;
-  border: 1.5px solid #A9B8AE;
-  border-radius: 3.25px;
-}
-
-/*
-╭──────────────────────────────────────────────────────────────────╮
-│ 📌 POSITIONS                                                     │
-╰──────────────────────────────────────────────────────────────────╯
-*/
-.box-center {
-  /* 📌 position */
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  margin: auto;
-}
-
-/*
-◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
-◼️ DARK-THEME :: GENERAL                                                                ◼️
-◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
-*/
-.dark-background {
-  /* 🎨 style */
-  background-color: var(--dark-theme) !important;
-}
-
-.dark-background-1 {
-  /* 🎨 style */
-  background-color: var(--dark-theme-1) !important;
-}
-
-/*
-◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
-◼️ DARK-THEME :: OTHER                                                                  ◼️
-◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
-*/
-.dark-background .hover-color-primary:hover,
-.dark-background-1 .hover-color-primary:hover {
-  /* 🎨 style */
-  color: var(--primary) !important;
-}
-
 /* #region ➤ [MAIN] [CONTAINERS] Website Layout */
 .widget-component {
   display: grid;
@@ -2592,5 +2423,155 @@ section {
 }
 
 /* #endregion ➤ [MAIN] [CONTAINERS] Website Layout */
+hr {
+  /* 🎨 style */
+  width: 100%;
+  margin: 16.17px 0;
+  opacity: 0.25;
+  border: 1.46983px solid #ff5555;
+  background-color: #ff5555;
+}
+
+form fieldset {
+  /* 🎨 style */
+  outline: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+form input, form select {
+  /* 🎨 style */
+  outline: none;
+  border: none;
+  opacity: 1;
+  cursor: text;
+  align-items: center;
+  text-align: start;
+  display: flex;
+  transition: all 0.15s ease;
+  /* background: #ffffff; */
+  /* border: 0.5px solid #37474f; */
+  box-sizing: border-box;
+  border-radius: 7.34914px;
+  padding: 7px;
+  background-color: transparent;
+  border: 1px solid var(--gray-day, #CCC);
+}
+form input {
+  /* 🎨 style */
+  height: 44px;
+  width: -webkit-fill-available;
+  width: -moz-available;
+  border: 1px solid var(--grey-shade);
+  box-sizing: border-box;
+  border-radius: 8px;
+  padding: 20px 12px;
+  outline: none;
+  font-size: 14px;
+  background-color: transparent;
+}
+form input:hover {
+  /* 🎨 style */
+  border: 1px solid var(--grey);
+}
+form input:focus {
+  /* 🎨 style */
+  border: 1px solid var(--dark-theme-1);
+}
+form input[placeholder] {
+  /* 🎨 style */
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+form input.v-1 {
+  /* 🎨 style */
+  width: 20px;
+  height: 20px;
+  border: 1px solid #CCCCCC;
+  accent-color: var(--primary);
+}
+.dark-background-1 form input {
+  border: 1px solid var(--dark-theme-1-2-shade);
+}
+.dark-background-1 form input:hover {
+  /* 🎨 style */
+  border: 1px solid var(--dark-theme-1-3-shade);
+}
+.dark-background-1 form input:focus {
+  /* 🎨 style */
+  border: 1px solid var(--dark-theme-1-3-shade);
+}
+
+.width-auto {
+  width: auto;
+}
+
+.width-fit-content {
+  width: fit-content;
+}
+
+.width-100 {
+  width: 100%;
+}
+
+img.google-aspect-ratio {
+  /* 🎨 style */
+  /* width: auto; */
+  /* max-height: 100%; */
+  object-fit: contain;
+}
+
+.checkmark {
+  position: absolute;
+  top: -10px;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  background-color: transparent;
+  border: 1.5px solid #A9B8AE;
+  border-radius: 3.25px;
+}
+
+/*
+╭──────────────────────────────────────────────────────────────────╮
+│ 📌 POSITIONS                                                     │
+╰──────────────────────────────────────────────────────────────────╯
+*/
+.box-center {
+  /* 📌 position */
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+}
+
+/*
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ DARK-THEME :: GENERAL                                                                ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+*/
+.dark-background {
+  /* 🎨 style */
+  background-color: var(--dark-theme) !important;
+}
+
+.dark-background-1 {
+  /* 🎨 style */
+  background-color: var(--dark-theme-1) !important;
+}
+
+/*
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ DARK-THEME :: OTHER                                                                  ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+*/
+.dark-background .hover-color-primary:hover,
+.dark-background-1 .hover-color-primary:hover {
+  /* 🎨 style */
+  color: var(--primary) !important;
+}
 
 /*# sourceMappingURL=app.css.map */
