feat(styles): new admin state style
- Add new style for when 'mutation' of a widget/component is enabled.

feat #1917

--- a/static/app.css
+++ b/static/app.css
@@ -2558,6 +2558,11 @@ img.google-aspect-ratio {
   margin: auto;
 }
 
+.mutated {
+  /* 🎨 style */
+  border: 1px solid #F00;
+}
+
 /*
 ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 ◼️ DARK-THEME :: GENERAL                                                                ◼️
