--- a/static/scss/misc.scss
+++ b/static/scss/misc.scss
@@ -154,6 +154,12 @@ img.google-aspect-ratio
   margin: auto;
 }
 
+.mutated
+{
+  /* 🎨 style */
+  border: 1px solid #F00;
+}
+
 /*
 ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 ◼️ DARK-THEME :: GENERAL                                                                ◼️
