--- a/static/scss/button.scss
+++ b/static/scss/button.scss
@@ -226,7 +226,7 @@ button
   ╰──────────────────────────────────────────────────────────────────╯
   */
 
-  .btn-shadow-1
+  &.btn-shadow-1
   {
     /* 🎨 style */
     box-shadow: 0px 3px 8px 0px rgba(212, 84, 12, 0.32);
