feat(authors): first commit
- First commit ready for testing.

feat #1879

--- a/static/app.css
+++ b/static/app.css
@@ -97,7 +97,6 @@ html {
 
 body {
   color: var(--black);
-  background-color: var(--whitev2);
   margin: 0 !important;
   font-family: Roboto;
   font-size: 14px;
@@ -1604,6 +1603,12 @@ p {
   font-size: 32px;
 }
 
+.s-38,
+.global.s-38,
+.global.s-38 > * {
+  font-size: 38px;
+}
+
 .s-40,
 .global.s-40,
 .global.s-40 > * {
@@ -1759,7 +1764,7 @@ h6 {
   /* 🎨 style */
   color: var(--white-3) !important;
 }
-.dark-background .color-white-3.dark-v3, .dark-background-1 .color-white-3.dark-v3 {
+.dark-background .color-white-3.dark-v3, .dark-background-1 .color-white-3.dark-v3, .dark-mode .color-white-3.dark-v3 {
   /* 🔥 override */
   /* 🎨 style */
   color: var(--grey-shade) !important;
@@ -1774,7 +1779,7 @@ h6 {
   /* 🎨 style */
   color: var(--primary) !important;
 }
-.dark-background .color-primary, .dark-background-1 .color-primary {
+.dark-background .color-primary, .dark-background-1 .color-primary, .dark-mode .color-primary {
   /* 🔥 override */
   /* 🎨 style */
   color: var(--primary) !important;
@@ -1789,7 +1794,7 @@ h6 {
   /* 🎨 style */
   color: var(--primary-fade-2) !important;
 }
-.dark-background .color-primary-fade-2.dark-v0, .dark-background-1 .color-primary-fade-2.dark-v0 {
+.dark-background .color-primary-fade-2.dark-v0, .dark-background-1 .color-primary-fade-2.dark-v0, .dark-mode .color-primary-fade-2.dark-v0 {
   /* 🔥 override */
   /* 🎨 style */
   color: var(--primary-fade-2) !important;
@@ -1834,7 +1839,7 @@ h6 {
   /* 🎨 style */
   color: var(--green-color) !important;
 }
-.dark-background .color-green.dark-v0, .dark-background-1 .color-green.dark-v0 {
+.dark-background .color-green.dark-v0, .dark-background-1 .color-green.dark-v0, .dark-mode .color-green.dark-v0 {
   /* 🔥 override */
   /* 🎨 style */
   color: var(--green-color) !important;
@@ -1859,7 +1864,7 @@ h6 {
   /* 🎨 style */
   color: var(--grey-shade) !important;
 }
-.dark-background .color-grey-shade.dark-v1, .dark-background-1 .color-grey-shade.dark-v1 {
+.dark-background .color-grey-shade.dark-v1, .dark-background-1 .color-grey-shade.dark-v1, .dark-mode .color-grey-shade.dark-v1 {
   /* 🔥 override */
   /* 🎨 style */
   color: var(--grey) !important;
@@ -1879,7 +1884,7 @@ h6 {
   /* 🎨 style */
   color: var(--grey-shade-4) !important;
 }
-.dark-background .color-grey-v2.grey-v1, .dark-background-1 .color-grey-v2.grey-v1 {
+.dark-background .color-grey-v2.grey-v1, .dark-background-1 .color-grey-v2.grey-v1, .dark-mode .color-grey-v2.grey-v1 {
   /* 🔥 override */
   /* 🎨 style */
   color: var(--grey-shade-3) !important;
@@ -1904,27 +1909,27 @@ h6 {
   /* 🎨 style */
   color: var(--grey) !important;
 }
-.dark-background .color-grey, .dark-background-1 .color-grey {
+.dark-background .color-grey, .dark-background-1 .color-grey, .dark-mode .color-grey {
   /* 🔥 override */
   /* 🎨 style */
   color: var(--grey-shade-2) !important;
 }
-.dark-background .color-grey.dark-white-v1, .dark-background-1 .color-grey.dark-white-v1 {
+.dark-background .color-grey.dark-white-v1, .dark-background-1 .color-grey.dark-white-v1, .dark-mode .color-grey.dark-white-v1 {
   /* 🔥 override */
   /* 🎨 style */
   color: var(--white) !important;
 }
-.dark-background .color-grey.dark-white-v3, .dark-background-1 .color-grey.dark-white-v3 {
+.dark-background .color-grey.dark-white-v3, .dark-background-1 .color-grey.dark-white-v3, .dark-mode .color-grey.dark-white-v3 {
   /* 🔥 override */
   /* 🎨 style */
   color: var(--white-3) !important;
 }
-.dark-background .color-grey.grey-v1, .dark-background-1 .color-grey.grey-v1 {
+.dark-background .color-grey.grey-v1, .dark-background-1 .color-grey.grey-v1, .dark-mode .color-grey.grey-v1 {
   /* 🔥 override */
   /* 🎨 style */
   color: var(--grey-shade) !important;
 }
-.dark-background .color-grey.dark-v1, .dark-background-1 .color-grey.dark-v1 {
+.dark-background .color-grey.dark-v1, .dark-background-1 .color-grey.dark-v1, .dark-mode .color-grey.dark-v1 {
   /* 🔥 override */
   /* 🎨 style */
   color: var(--grey) !important;
@@ -1939,12 +1944,12 @@ h6 {
   /* 🎨 style */
   color: var(--dark-theme) !important;
 }
-.dark-background .color-black-2, .dark-background-1 .color-black-2 {
+.dark-background .color-black-2, .dark-background-1 .color-black-2, .dark-mode .color-black-2 {
   /* 🔥 override */
   /* 🎨 style */
   color: var(--white) !important;
 }
-.dark-background .color-black-2.grey-v1, .dark-background-1 .color-black-2.grey-v1 {
+.dark-background .color-black-2.grey-v1, .dark-background-1 .color-black-2.grey-v1, .dark-mode .color-black-2.grey-v1 {
   /* 🔥 override */
   /* 🎨 style */
   color: var(--grey-shade) !important;
@@ -1954,12 +1959,12 @@ h6 {
   /* 🎨 style */
   color: var(--dark-theme-1) !important;
 }
-.dark-background .color-black-3, .dark-background-1 .color-black-3 {
+.dark-background .color-black-3, .dark-background-1 .color-black-3, .dark-mode .color-black-3 {
   /* 🔥 override */
   /* 🎨 style */
   color: var(--white) !important;
 }
-.dark-background .color-black-3.dark-v1, .dark-background-1 .color-black-3.dark-v1 {
+.dark-background .color-black-3.dark-v1, .dark-background-1 .color-black-3.dark-v1, .dark-mode .color-black-3.dark-v1 {
   /* 🔥 override */
   /* 🎨 style */
   color: var(--grey-shade) !important;
@@ -2222,17 +2227,26 @@ button.btn-hollow.v4:hover {
   border: 1px solid var(--grey-shade) !important;
   color: initial;
 }
-.dark-background button.btn-hollow.v2, .dark-background-1 button.btn-hollow.v2 {
+button.btn-hollow.v5 {
+  /* 🎨 style */
+  background-color: var(--dark-theme) !important;
+  color: var(--white) !important;
+}
+.dark-background button.btn-hollow.v2, .dark-background-1 button.btn-hollow.v2, .dark-mode button.btn-hollow.v2 {
   /* 🎨 style */
   border: 1px solid var(--dark-theme-1) !important;
 }
-.dark-background button.btn-hollow.v3d, .dark-background-1 button.btn-hollow.v3d {
+.dark-background button.btn-hollow.v3d, .dark-background-1 button.btn-hollow.v3d, .dark-mode button.btn-hollow.v3d {
   /* 🎨 style */
   border: 1px solid var(--grey) !important;
 }
-.dark-background button.btn-hollow.v3d:hover, .dark-background-1 button.btn-hollow.v3d:hover {
+.dark-background button.btn-hollow.v3d:hover, .dark-background-1 button.btn-hollow.v3d:hover, .dark-mode button.btn-hollow.v3d:hover {
   /* 🎨 style */
   border: 1px solid var(--grey-shade) !important;
+}
+.dark-background button.btn-hollow.v5, .dark-background-1 button.btn-hollow.v5, .dark-mode button.btn-hollow.v5 {
+  /* 🎨 style */
+  background-color: var(--white);
 }
 button.btn-dark {
   /* 🎨 style */
@@ -2244,11 +2258,11 @@ button.btn-dark:hover {
   /* 🎨 style */
   background-color: var(--white-3);
 }
-.dark-background button.btn-dark, .dark-background-1 button.btn-dark {
+.dark-background button.btn-dark, .dark-background-1 button.btn-dark, .dark-mode button.btn-dark {
   /* 🎨 style */
   background-color: var(--dark-theme-1-4-shade);
 }
-.dark-background button.btn-dark:hover, .dark-background-1 button.btn-dark:hover {
+.dark-background button.btn-dark:hover, .dark-background-1 button.btn-dark:hover, .dark-mode button.btn-dark:hover {
   /* 🎨 style */
   background-color: var(--dark-theme);
 }
