--- a/static/scss/_root.scss
+++ b/static/scss/_root.scss
@@ -299,6 +299,11 @@ $root-color-map:
       (
         "class-name": ".grey-v1",
         "root-name": "--grey-shade"
+      ),
+      "3":
+      (
+        "class-name": ".white-v1",
+        "root-name": "--grey-color"
       )
     )
   ),
